# webmon

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ChangeLog  Makefile  Manifest.in  README  README.rst  babel.cfg  bandit.ini  config.yaml  inputs.yaml  messages.pot  optional-requirements.txt  pylintrc  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt  run_webmon2.py  setup.cfg  setup.py  test.txt  webmon.py  webmon2.ini
contrib/: webmon2.service
doc/: dev.rst
sample/: config.yaml  inputs.yaml
webmon/: beartype.py  cache.py  common.py  common_test.py  comparators.py  comparators_test.py  config.py  config_test.py  database.py  db.py  filters.py  filters_test.py  input.py  inputs.py  logging_setup.py  main.css  main.py  metrics.py  migrate.py  model.py  outputs.py  reporter.py  worker.py
webmon/filters/: __init__.py  _abstract.py  diff.py  grep.py  history.py  html2text.py  join.py  sort.py  split_text.py  strip.py  wrap.py
webmon/inputs/: __init__.py  abstract.py  file_input.py  github.py  jamendo.py  rss.py  web_input.py
webmon/schema/: 0000001.sql  0000002.sql  0000003.sql  0000004.sql
webmon/web/: __init__.py  app.py  browser.py  forms.py  security.py  system.py
webmon/web/templates/: _render_entry.html  _render_field.html  _render_source.html  base.html  entry.html  filter_edit.html  group_entries.html  group_sources.html  groups.html  index.html  login.html  source.html  source_entries.html  source_filters.html  source_new.html  sources.html
webmon/web/templates/system/: settings.html
webmon2/: __init__.py  cli.py  common.py  common_test.py  conf.py  database.py  formatters.py  formatters_test.py  imp_exp.py  logging_setup.py  mailer.py  main.py  migrate.py  model.py  opml.py  security.py  worker.py
webmon2/database/: __init__.py  _db.py  _dbcommon.py  binaries.py  entries.py  groups.py  scoring.py  settings.py  sources.py  system.py  users.py
webmon2/filters/: __init__.py  _abstract.py  diff.py  fix_urls.py  grep.py  history.py  html2text.py  html2text_test.py  join.py  score.py  score_test.py  sort.py  split_re.py  split_text.py  split_text_test.py  strip.py  wrap.py
webmon2/inputs/: __init__.py  abstract.py  file_input.py  github.py  jamendo.py  rss.py  web_input.py
webmon2/schema/: 0000001.sql  0000002.sql  0000003.sql  0000004.sql  0000005.sql  0000006.sql  0000007.sql  0000008.sql  0000009.sql  0000010.sql  0000011.sql  0000012.sql  0000013.sql  0000014.sql  0000015.sql  0000016.sql  0000017.sql  0000018.sql  0000019.sql  0000020.sql  0000021.sql  0000022.sql  0000023.sql  0000024.sql  0000025.sql  0000026.sql  0000027.sql  0000028.sql  0000029.sql  0000030.sql  0000031.sql  0000032.sql  0000033.sql  000005.sql
webmon2/sources/: __init__.py  abstract.py  dummy.py  file_input.py  github.py  gitlab.py  jamendo.py  rss.py  web.py
webmon2/translations/pl/LC_MESSAGES/: messages.mo  messages.po
webmon2/web/: __init__.py  _commons.py  _filters.py  _filters_test.py  app.py  appsession.py  atom.py  browser.py  entries.py  entry.py  forms.py  group.py  proxy.py  root.py  security.py  source.py  system.py
webmon2/web/static/: app.css  app.js  t_pl.js
webmon2/web/templates/: _css.html  _render_entry.html  _render_field.html  _render_nav.html  _render_source.html  base.html  entries.html  entries_search.html  entry.html  filter_edit.html  filter_new.html  group.html  group_entries.html  group_entry.html  group_sources.html  groups.html  history.html  index.html  login.html  login.totp.html  source.html  source_entries.html  source_entry.html  source_filter.html  source_filters.html  source_new.html  sources.html  starred.html
webmon2/web/templates/system/: _sett_nav.html  data.html  globals.html  logs.html  scoring.html  sys_info.html  sys_user.html  sys_users.html  user.html  user.totp.html
